--- a/static/template/index.html
+++ b/static/template/index.html
@@ -1,8 +1,12 @@
 <html>  
     <head>
         <link rel="stylesheet" href="/static/css/bulma.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+        <link rel="stylesheet" href="/static/css/alertify.min.css">
+        <link rel="stylesheet" href="/static/css/default.min.css">
+        <link rel="stylesheet" href="/static/css/custom.css">
+        <script src="/static/js/lib/vue.js"></script>
+        <script src="/static/js/lib/vue-router.js"></script>
+        <script src="/static/js/lib/alertify.min.js"></script>
     </head>
     <body>
         <div id="app">
@@ -10,8 +14,10 @@
                     <h3 class="title is-3">页面加载中...</h3>
                 </router-view>
         </div>
-     
+        <script src="/static/js/components/nav.js"></script>
         <script src="/static/js/login.js"></script>
+        <script src="/static/js/home.js"></script>
+        <script src="/static/js/center.js"></script>
         <script src="/static/js/index.js"></script>
     </body>
 </html>
