--- a/static/template/index.html
+++ b/static/template/index.html
@@ -15,6 +15,8 @@
                 </router-view>
         </div>
         <script src="/static/js/components/nav.js"></script>
+        <script src="/static/js/components/app-list.js"></script>
+        <script src="/static/js/components/user-list.js"></script>
         <script src="/static/js/login.js"></script>
         <script src="/static/js/home.js"></script>
         <script src="/static/js/center.js"></script>
