finish user register

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -18,6 +18,7 @@
         <script src="/static/js/components/app-list.js"></script>
         <script src="/static/js/components/user-list.js"></script>
         <script src="/static/js/login.js"></script>
+        <script src="/static/js/register.js"></script>
         <script src="/static/js/home.js"></script>
         <script src="/static/js/center.js"></script>
         <script src="/static/js/index.js"></script>
