完成VUE密码重置

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <div id="app">
-                <router-view>
-                    <h3 class="title is-3">页面加载中...</h3>
-                </router-view>
+            <router-view>
+                <h3 class="title is-3">页面加载中...</h3>
+            </router-view>
         </div>
         <script src="/static/js/components/nav.js"></script>
         <script src="/static/js/components/app-list.js"></script>
@@ -20,6 +20,7 @@
         <script src="/static/js/login.js"></script>
         <script src="/static/js/register.js"></script>
         <script src="/static/js/app-register.js"></script>
+        <script src="/static/js/password-reset.js"></script>
         <script src="/static/js/home.js"></script>
         <script src="/static/js/center.js"></script>
         <script src="/static/js/index.js"></script>
