update APP edit to VUE

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -20,6 +20,7 @@
         <script src="/static/js/login.js"></script>
         <script src="/static/js/register.js"></script>
         <script src="/static/js/app-register.js"></script>
+        <script src="/static/js/app-edit.js"></script>
         <script src="/static/js/password-reset.js"></script>
         <script src="/static/js/home.js"></script>
         <script src="/static/js/center.js"></script>
