update password reset to VUE

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -22,6 +22,7 @@
         <script src="/static/js/app-register.js"></script>
         <script src="/static/js/app-edit.js"></script>
         <script src="/static/js/password-reset.js"></script>
+        <script src="/static/js/admin-reset-anyone-password.js"></script>
         <script src="/static/js/home.js"></script>
         <script src="/static/js/center.js"></script>
         <script src="/static/js/index.js"></script>
