app 用户角色的增加

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -17,10 +17,13 @@
         <script src="/static/js/components/nav.js"></script>
         <script src="/static/js/components/app-list.js"></script>
         <script src="/static/js/components/user-list.js"></script>
+        <script src="/static/js/components/go-back.js"></script>
         <script src="/static/js/login.js"></script>
         <script src="/static/js/register.js"></script>
         <script src="/static/js/app-register.js"></script>
         <script src="/static/js/app-edit.js"></script>
+        <script src="/static/js/app-users.js"></script>
+        <script src="/static/js/app-role.js"></script>
         <script src="/static/js/password-reset.js"></script>
         <script src="/static/js/admin-reset-anyone-password.js"></script>
         <script src="/static/js/home.js"></script>
