--- a/static/template/index.html
+++ b/static/template/index.html
@@ -24,6 +24,7 @@
         <script src="/static/js/app-edit.js"></script>
         <script src="/static/js/app-users.js"></script>
         <script src="/static/js/app-role.js"></script>
+        <script src="/static/js/app-role-and-permission.js"></script>
         <script src="/static/js/password-reset.js"></script>
         <script src="/static/js/admin-reset-anyone-password.js"></script>
         <script src="/static/js/home.js"></script>
