--- a/static/template/confirm.html
+++ b/static/template/confirm.html
@@ -3,6 +3,7 @@
 
 
         <link rel="stylesheet" href="/static/css/bulma.min.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
         <style>
             body{
                 padding-top: 15%;
