--- a/static/template/login.html
+++ b/static/template/login.html
@@ -2,6 +2,7 @@
     <head>
         <title>OpenAuth登陆</title>
         <link rel="stylesheet" href="/static/css/bulma.min.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
         <style>
             body{
                 padding-top: 15%;
@@ -22,7 +23,7 @@
         <div class="columns">
             <div class="column"></div>
             <div class="column is-one-fifth">
-                    <h2 style="text-align: center;"  class="title is-3">Open Auth</h2>
+                    <h2 style="text-align: center; color:aliceblue"  class="title is-3">Open Auth</h2>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal">
                             <label class="label">账户:</label>
