--- a/static/template/no-promise.html
+++ b/static/template/no-promise.html
@@ -1,7 +1,6 @@
 <html>
     <header>
-
-
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
         <link rel="stylesheet" href="/static/css/bulma.min.css">
         <style>
             body{
