--- a/static/template/no-promise.html
+++ b/static/template/no-promise.html
@@ -7,7 +7,7 @@
                 padding-top: 15%;
                 height: 100%;
                 background-image: url("/static/images/bg.png") !important;
-                background-repeat: repeat-x!important;
+                background-size: contain;
             }
         </style>
          <title>OpenAuth认证</title>
