修改页面结构

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -27,8 +27,9 @@
         <script src="/static/js/app-role-and-permission.js"></script>
         <script src="/static/js/password-reset.js"></script>
         <script src="/static/js/admin-reset-anyone-password.js"></script>
+        <script src="/static/js/apps.js"></script>
+        <script src="/static/js/users.js"></script>
         <script src="/static/js/home.js"></script>
-        <script src="/static/js/center.js"></script>
         <script src="/static/js/index.js"></script>
     </body>
 </html>
