--- a/static/template/login.html
+++ b/static/template/login.html
@@ -55,7 +55,7 @@
                                         <button class="button is-primary"  id="login">
                                                 登陆
                                         </button>
-                                        {{if .OpenRegister}}<a href="/user/register" target="_blank">用户注册</a>{{end}}
+                                        {{if .OpenRegister}}<a href="/#/register" target="_blank">注册</a>{{end}}
                                     </div>
                                     </div>
                                 </div>
