--- a/static/template/index.html
+++ b/static/template/index.html
@@ -26,6 +26,7 @@
         <script src="/static/js/app-role.js"></script>
         <script src="/static/js/app-role-and-permission.js"></script>
         <script src="/static/js/password-reset.js"></script>
+        <script src="/static/js/app-user-role.js"></script>
         <script src="/static/js/admin-reset-anyone-password.js"></script>
         <script src="/static/js/apps.js"></script>
         <script src="/static/js/users.js"></script>
