--- a/static/template/index.html
+++ b/static/template/index.html
@@ -21,6 +21,7 @@
         <script src="/static/js/login.js"></script>
         <script src="/static/js/register.js"></script>
         <script src="/static/js/app-register.js"></script>
+        <script src="/static/js/open-apps.js"></script>
         <script src="/static/js/app-edit.js"></script>
         <script src="/static/js/app-users.js"></script>
         <script src="/static/js/app-role.js"></script>
