--- a/static/template/login.html
+++ b/static/template/login.html
@@ -1,14 +1,124 @@
 <html>
     <header>
         <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-        <link rel="stylesheet" href="/static/css/bulma.min.css">
         <style>
+            *{
+                margin: 0;
+                padding: 0;
+            }
             body{
-                padding-top: 15%;
                 height: 100%;
                 background-image: url("/static/images/bg.png") !important;
                 background-size: contain;
             }
+            .modal{
+                position: relative;
+            }
+            .modal-background{
+                width: 100%;
+                height: 100%;
+                background-color: rgba(10,10,10,.86);
+            }
+            
+            @media screen and (min-width: 769px) {
+                .modal-card{
+                    width: 600px
+                }
+            }
+            
+            .modal-card{
+                position: absolute;
+                top: 0;
+                left: 10px;
+                right: 10px;
+                bottom: 0;
+                margin: auto;
+                background-color: #fff;
+                border-radius: 8px;
+                height: 360px;
+                max-height: calc(100vh -40px);
+                overflow: hidden;
+            }
+            .modal-card-head{
+                background-color: #f5f5f5;
+                padding: 20px;
+                font-size: 30px;
+                font-weight: 400;
+                text-align: center;
+                border-bottom: 1px solid #dbdbdb;
+            }
+            .modal-card-body{
+                padding: 40px 25px 0;
+            }
+            .is-horizontal{
+                display: flex;
+                margin-bottom: 20px
+            }
+            .is-horizontal .is-normal{
+                width: 75px;
+                padding: 8px 15px;
+                height: 38px;
+                line-height: 20px;
+                border-radius: 2px 0 0 2px;
+                text-align: center;
+                overflow: hidden;
+                box-sizing: border-box;
+                font-weight: 600;
+                font-size: 16px;
+            }
+            .field .field-body{
+                width: calc(100% - 75px);
+            }
+            
+            .field-body .input{
+                width: 100%;
+                height: 38px;
+                line-height: 1.3;
+                border-width: 1px;
+                border-style: solid;
+                background-color: #fff;
+                border-radius: 2px;
+                border-color: #dbdbdb;
+                color: #363636;
+                box-shadow: inset 0 1px 2px rgba(10,10,10,.1)
+            }
+            .field-body .button{
+                display: inline-block;
+                height: 38px;
+                line-height: 38px;
+                background-color: #1E9FFF;
+                padding: 0 50px;
+                text-align: center;
+                font-size: 14px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                color: #fff;
+            }
+
+            .field-body .button:hover{
+                opacity: .8;
+            }
+            .login{
+                margin-top: 40px;
+                display:flex;
+                justify-content: center;
+                text-align: center;
+            }
+            .login .control{
+                display: flex;
+                flex-direction: column;
+            }
+            .login .control a{
+                margin-top: 10px;
+                font-size: 14px;
+                color: #1d1c1c;
+            }
+            .login .control a:hover{
+                color: #393D49;
+            }
+            
+            
         </style>
          <title>OpenAuth认证</title>
     </header>
@@ -32,7 +142,6 @@
                                     </div>
                                 </div>
                             </div>
-        
                             <div class="field is-horizontal">
                                 <div class="field-label is-normal">
                                     <label class="label">密码:</label>
@@ -45,7 +154,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="field is-horizontal">
+                            <div class="login is-horizontal">
                                 <div class="field-label">
                                     <!-- Left empty for spacing -->
                                 </div>
@@ -55,7 +164,7 @@
                                         <button class="button is-primary"  id="login">
                                                 登陆
                                         </button>
-                                        {{if .OpenRegister}}<a href="/#/register" target="_blank">注册</a>{{end}}
+                                        {{if .OpenRegister}}<a href="/#/register" target="_blank">没有账号？立即注册</a>{{end}}
                                     </div>
                                     </div>
                                 </div>
